cmake_minimum_required(VERSION 3.10)

project(Hub)
#set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD 14)
set(PYBIND11_PYTHON_VERSION 3.6)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -fPIC")
set(CMAKE_DEBUG_POSTFIX "")

find_package(pybind11 REQUIRED)
find_package(Eigen3 REQUIRED)

#pybind11_add_module(${PROJECT_NAME} pywrap.cpp test.py)
pybind11_add_module(${PROJECT_NAME} pywrap.cpp)

target_compile_definitions(${PROJECT_NAME} PRIVATE VERSION_INFO=${EXAMPLE_VERSION_INFO})
target_include_directories(${PROJECT_NAME} PRIVATE ${PYBIND11_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE Eigen3::Eigen hub)


add_custom_command(
    TARGET ${PROJECT_NAME}
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/test.py"
            $<TARGET_FILE_DIR:${PROJECT_NAME}>
    COMMAND ${PYTHON_EXECUTABLE} test.py
        )


file(GLOB_RECURSE tests *.py)


add_custom_target(tests SOURCES ${tests})
